ml-workshop-airflow2/base/deployment-scheduler.yaml


# Source: airflow/templates/scheduler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-aflow-airflow-scheduler
  labels:
    app.kubernetes.io/name: airflow
    helm.sh/chart: airflow-10.3.2
    app.kubernetes.io/instance: app-aflow
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: scheduler
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: airflow
      app.kubernetes.io/instance: app-aflow
      app.kubernetes.io/component: scheduler
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: airflow
        helm.sh/chart: airflow-10.3.2
        app.kubernetes.io/instance: app-aflow
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: scheduler
      annotations:
        checksum/configmap: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:

      priorityClassName: ""
      # securityContext:
      #   fsGroup: 1001
      # serviceAccountName: default
      affinity:
        podAffinity:

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: airflow
                    app.kubernetes.io/instance: app-aflow
                    app.kubernetes.io/component: scheduler
                namespaces:
                  - "ml-workshop"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:


      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: git-sync
          command:
            - /git-sync
          ports:
            - name: gitsync
              containerPort: 2020
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: dags-data
              mountPath: /tmp/git
          terminationMessagePolicy: File
          image: 'k8s.gcr.io/git-sync/git-sync:v3.2.2'
        - name: airflow-scheduler
          image: quay.io/ml-aml-workshop/airflow-custom:2.0.0.scheduler
          imagePullPolicy: "Always"
          # securityContext:
          #   runAsUser: 1001
          ports:
            - name: task-logs
              containerPort: 8793
          volumeMounts:
            - name: dags-data
              mountPath: /opt/bitnami/airflow/dags
          resources:
            limits: {}
            requests: {}
      volumes:
        - name: dags-data
          emptyDir: { }
      serviceAccount: airflow2-core
      serviceAccountName: airflow2-core
