ml-workshop-airflow2/base/deployment-web.yaml


# Source: airflow/templates/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-aflow-airflow-web
  labels:
    app.kubernetes.io/name: airflow
    helm.sh/chart: airflow-10.3.2
    app.kubernetes.io/instance: app-aflow
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: airflow
      app.kubernetes.io/instance: app-aflow
      app.kubernetes.io/component: web
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: airflow
        helm.sh/chart: airflow-10.3.2
        app.kubernetes.io/instance: app-aflow
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: web
      annotations:
        checksum/configmap: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:

      priorityClassName: ""

      affinity:
        podAffinity:

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: airflow
                    app.kubernetes.io/instance: app-aflow
                    app.kubernetes.io/component: web
                namespaces:
                  - "ml-workshop"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:

      serviceAccountName: airflow2-proxy
      containers:
        # - name: oauth-proxy
        #   image: openshift/oauth-proxy:latest
        #   imagePullPolicy: IfNotPresent
        #   ports:
        #     - containerPort: 8080
        #       name: public
        #   args:
        #     - --https-address=
        #     - --http-address=:8080
        #     - --provider=openshift
        #     - --openshift-service-account=airflow2-proxy
        #     - --upstream=http://localhost:8888
        #     - --cookie-secret=SECRETAIRFLOW2
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: git-sync
          command:
            - /git-sync
          ports:
            - name: gitsync
              protocol: TCP
              containerPort: 2020
          imagePullPolicy: Always
          volumeMounts:
            - name: dags-data
              mountPath: /tmp/git
          terminationMessagePolicy: File
          image: 'k8s.gcr.io/git-sync/git-sync:v3.2.2'
        - name: airflow-web
          image: quay.io/ml-aml-workshop/airflow-custom:2.0.0.web
          # image: quay.io/ml-aml-workshop/airflow-custom:2.1.6.web
          imagePullPolicy: "Always"
#          securityContext:
#            runAsUser: 1001
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: http

            failureThreshold: 6
            initialDelaySeconds: 180
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: http

            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - name: dags-data
              mountPath: /opt/bitnami/airflow/dags

          resources:
            limits: {}
            requests: {}
      volumes:
        - name: dags-data
          emptyDir: {}
