ml-workshop-airflow2/base/deployment-worker.yaml


# Source: airflow/templates/worker/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-aflow-airflow-worker
  labels:
    app.kubernetes.io/name: airflow
    helm.sh/chart: airflow-10.3.2
    app.kubernetes.io/instance: app-aflow
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: worker
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: airflow
      app.kubernetes.io/instance: app-aflow
      app.kubernetes.io/component: worker
  serviceName: app-aflow-airflow-worker-headless
  replicas: 1
  updateStrategy:
    type: "RollingUpdate"
  template:
    metadata:
      annotations:
        checksum/configmap: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
      labels:
        app.kubernetes.io/name: airflow
        helm.sh/chart: airflow-10.3.2
        app.kubernetes.io/instance: app-aflow
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: worker
    spec:

      priorityClassName: ""
#      securityContext:
#        fsGroup: 1001
      # serviceAccountName: default
      affinity:
        podAffinity:

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: airflow
                    app.kubernetes.io/instance: app-aflow
                    app.kubernetes.io/component: worker
                namespaces:
                  - "ml-workshop"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:

      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: git-sync
          command:
            - /git-sync
          ports:
            - name: gitsync
              protocol: TCP
              containerPort: 2020
          imagePullPolicy: Always
          volumeMounts:
            - name: dags-data
              mountPath: /tmp/git
          terminationMessagePolicy: File
          image: 'k8s.gcr.io/git-sync/git-sync:v3.2.2'
        - name: airflow-worker
          image: quay.io/ml-aml-workshop/airflow-custom:2.0.0.worker
          imagePullPolicy: "Always"
          # securityContext:
          #   runAsUser: 1001
          resources:
            limits: {}
            requests: {}
          ports:
            - name: worker
              containerPort: 8793
          livenessProbe:
            tcpSocket:
              port: worker

            failureThreshold: 6
            initialDelaySeconds: 180
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: worker

            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - name: dags-data
              mountPath: /opt/bitnami/airflow/dags

      volumes:
        - name: dags-data
          emptyDir: { }
      serviceAccount: airflow2-core
      serviceAccountName: airflow2-core
