ml-workshop-airflow2/base/statefulset-redis.yaml


# Source: airflow/charts/redis/templates/master/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-aflow-redis-master
  namespace: "ml-workshop"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-14.8.11
    app.kubernetes.io/instance: app-aflow
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: app-aflow
      app.kubernetes.io/component: master
  serviceName: app-aflow-redis-headless
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        helm.sh/chart: redis-14.8.11
        app.kubernetes.io/instance: app-aflow
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: master
      annotations:
        checksum/configmap: 477b9ea763dc6dfa714452f6a707a13d3b4a48d9c512e594d44a5233db098999
        checksum/health: 9463811d25909dca6b3c85715619dc375de313711438368cd8a7967fd8248221
        checksum/scripts: 0b4fee4f0d3a3a781a82225288a8e70e92a1a08d2e396d21e84188a6b1906cc0
        checksum/secret: accf045d76eda92532bfdcc8e5ceaf21dda9888d6ba641c0d8bfb79cb11ebb6a
    spec:

      serviceAccountName: app-aflow-redis
      affinity:
        podAffinity:

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: redis
                    app.kubernetes.io/instance: app-aflow
                    app.kubernetes.io/component: master
                namespaces:
                  - "ml-workshop"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:

      terminationGracePeriodSeconds: 30
      containers:
        - name: redis
          image: registry.redhat.io/rhel8/redis-6:1-18
          #docker.io/bitnami/redis:6.2.5-debian-10-r11
          imagePullPolicy: "Always"
          # command:
          #   - /bin/bash
          # args:
          #   - -c
          #   - /opt/bitnami/scripts/start-scripts/start-master.sh
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            # One second longer than command timeout should prevent generation of zombie processes.
            timeoutSeconds: 6
            successThreshold: 1
            failureThreshold: 5
            tcpSocket: 
              port: 6379
            # exec:
            #   command:
            #     - sh
            #     - -c
            #     - /health/ping_liveness_local.sh 5
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
            tcpSocket: 
              port: 6379

            # exec:
            #   command:
            #     - sh
            #     - -c
            #     - /health/ping_readiness_local.sh 1
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            # - name: start-scripts
            #   mountPath: /opt/bitnami/scripts/start-scripts
            # - name: health
            #   mountPath: /health
            - name: redis-data
              # mountPath: /data
              mountPath: /var/lib/redis/data
              subPath:
            # - name: config
            #   mountPath: /opt/bitnami/redis/mounted-etc
            # - name: redis-tmp-conf
            #   mountPath: /opt/bitnami/redis/etc/
            # - name: tmp
            #   mountPath: /tmp

      volumes:
        # - name: start-scripts
        #   configMap:
        #     name: app-aflow-redis-scripts
        #     defaultMode: 0755
        # - name: health
        #   configMap:
        #     name: app-aflow-redis-health
        #     defaultMode: 0755
        # - name: config
        #   configMap:
        #     name: app-aflow-redis-configuration
        # - name: redis-tmp-conf
        #   emptyDir: {}
        # - name: tmp
        #   emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        labels:
          app.kubernetes.io/name: redis
          app.kubernetes.io/instance: app-aflow
          app.kubernetes.io/component: master
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
